# geom_2d_samples

./: .gitignore  CMakeLists.txt  readme.md  vcpkg.json
grid/: CMakeLists.txt  main.cpp
grid/src/: util.h
grid/src/ui/: button.cc  grid.cc  groupable.cc  label.cc  layout.cc
math/: CMakeLists.txt  main.cc
math/resources/: CMakeLists.txt
math/src/: game_loop.cc  game_loop.h  game_object.cc  game_object.h  game_state.cc  game_state.h  info.cc  info.h  render.cc  render.h  vector_product_visualizer.cc  vector_product_visualizer.h
menu/: CMakeLists.txt  main.cpp
menu/resources/: CMakeLists.txt
menu/src/: cursor.cc  layout_service.h  resource_manager.h  tile_map.cc
menu/src/ui/: button.cc  groupable.cc  image.cc  label.cc  layout.cc  tile_map.cc
sample/: CMakeLists.txt  main.cpp
vector-product/: CMakeLists.txt  main.cc
vector-product/resources/: CMakeLists.txt
vector-product/src/: vector_product_visualizer.cc
